@@ -2079,6 +2079,11 @@ BEGIN
     IDS_REPOBROWSE_INVALIDDROPDATA "Invalid data object dropped!"
 END
 
+STRINGTABLE 
+BEGIN
+    IDS_STATUSLIST_NESTED   "Nested"
+END
+
 #endif    // English (U.S.) resources
 /////////////////////////////////////////////////////////////////////////////
 
